fix: Viewed overflow

--- a/components/Viewed/Viewed.module.scss
+++ b/components/Viewed/Viewed.module.scss
@@ -2,6 +2,7 @@
 
 .Viewed {
 	padding-top: rem(48px);
+	overflow-x: hidden;
 	
 	.Viewed__slider {
 		padding: 0 rem(54px);
